...
                    }
                )
            TextField(
                value = query,
                onValueChange = changeQuery,
                modifier =
                    Modifier.fillMaxWidth().testTag("component_search").semantics {
                        contentDescription = searchLabel
                    },
                placeholder = { Text(searchLabel, Modifier.clearAndSetSemantics {}) },
                leadingIcon = {
                    Icon(painterResource(R.drawable.ic_search), contentDescription = null)
                },
...
                LazyVerticalGrid(
                    columns = GridCells.Adaptive(340.dp),
                    state = sampleListState,
                    contentPadding = PaddingValues(bottom = 20.dp),
                    verticalArrangement = Arrangement.spacedBy(8.dp),
                    horizontalArrangement = Arrangement.spacedBy(12.dp),
                    modifier = Modifier.fillMaxWidth().weight(1f).testTag("component_list"),
                ) {
                    if (resultCount == 0) {
                        item(span = { GridItemSpan(maxLineSpan) }) {
                            Column(
                                Modifier.fillMaxWidth().padding(vertical = 32.dp),
                                horizontalAlignment = Alignment.CenterHorizontally,
...
